--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch"
+    "build": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.0.24"
