--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "version": "0.1.0",
+  "license": "0BSD",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch"
@@ -7,6 +9,7 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.2"
+    "@tailwindcss/typography": "^0.5.2",
+    "postcss": "^8.4.14"
   }
 }
